# smart-commit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  simple_demo.py
examples/: README.md
src/smart_commit/: __init__.py  ai_provider.py  cli.py  config.py  git_utils.py
tests/: test_core.py
